Fix bar chart's uneven bars, and improve styles

--- a/web/styles/stylesheet.css
+++ b/web/styles/stylesheet.css
@@ -70,12 +70,18 @@ img {
     border-radius: 1rem;
 }
 
+/*
 .grid line{
   stroke: rgba(0, 0, 0, 0.2);
 }
 
 .grid path{
   stroke: rgba(0, 0, 0, 0.2);
+}
+*/
+
+.tick line {
+    stroke: rgba(0, 0, 0, 0.4)
 }
 
 /* .grid text{
